--- a/home.html
+++ b/home.html
@@ -21,10 +21,10 @@
 <body>
     <header>
         <div class="container-nav">
-            <h1><a href="/home">48Intens Official</a></h1>
+            <h1><a href="/home">Wots48</a></h1>
             <ul>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/news.html">News</a></li>
+                <li><a href="/news">News</a></li>
                 <li><a href="/member">Member</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
