--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
         <div class="container-nav">
             <h1><a href="/home">48Intens Official</a></h1>
             <ul>
-                <li><a href="/home.html">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/news">News</a></li>
                 <li><a href="/member">Member</a></li>
                 <li><a href="/about">About</a></li>
