--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>48Intens Official</title>
+    <title>Wots48 Official</title>
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="author" content="48Intens Official" />
     <meta name="description"
