--- a/home.html
+++ b/home.html
@@ -471,19 +471,8 @@
             </div>
 
             <footer>
-                Powered by ♥️ <a style="text-decoration:none" href="https://48intens.com/discord"> 48Intens Official</a>
-                <div class="social-icons">
-                    <p>Lets Connect With Us</p>
-                    <a href="https://www.instagram.com/48intens" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-instagram icon"></i>
-                    </a>
-                    <a href="https://48intens.com/discord" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-discord icon"></i>
-                    </a>
-                    <a href="about.html" target="_blank" rel="noopener noreferrer">
-                        <i class="fas fa-wifi icon"></i>
-                    </a>
-                </div>
+                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+
                 <br>
             </footer>
 
