--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 
                         </div>
 
-                       <button class="buttongoweb" onclick="goToLink('cari.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
+                       <button class="buttongoweb" onclick="goToLink('/showroom')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
                                 <span class="mdi mdi-movie"></span>
                                 <h1>Movie</h1>
                         </div>
