--- a/home.html
+++ b/home.html
@@ -35,9 +35,9 @@
 
                         </div>
 
-                       <button class="buttongoweb" onclick="goToLink('/showroom')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-movie"></span>
-                                <h1>Movie</h1>
+                       <button class="buttongoweb" onclick="goToLink('/live')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
+                                <span class="mdi mdi-history"></span>
+                                <h1>Recent</h1>
                         </div>
                        </button>
                        <button class="buttongoweb" onclick="goToLink('history.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
