--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Wots48 Official</title>
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="author" content="48Intens Official" />
@@ -42,7 +42,7 @@
                        </button>
                        <button class="buttongoweb" onclick="goToLink('history.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
                                 <span class="mdi mdi-history"></span>
-                                <h1>History</h1>
+                                <h1>Member</h1>
                         </div>
                        </button>
                                  <button class="buttongoweb" onclick="goToLink('favorit.html')">
