--- a/home.html
+++ b/home.html
@@ -3,16 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Wots48 Official</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <meta name="author" content="48Intens Official" />
+    <meta name="author" content="Wots48" />
     <meta name="description"
         content="-" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    <meta name="author" content="48Intens Official">
+    <meta name="author" content="">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="/assets/icon.png" />
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
