--- a/home.html
+++ b/home.html
@@ -42,20 +42,20 @@
                         </div>
                        </button>
                        <button class="buttongoweb" onclick="goToLink('history.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-history"></span>
+                                <span class="mdi mdi-account-group"></span>
                                 <h1>Member</h1>
                         </div>
                        </button>
                                  <button class="buttongoweb" onclick="goToLink('favorit.html')">
                                          <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
                                                  <div class="overlay-navbar"></div>
-                                                 <span class="mdi mdi-bookmark"></span>
-                                                 <h1>Favorit</h1>
+                                                 <span class="mdi mdi-newspaper-variant"></span>
+                                                 <h1>News</h1>
                                          </div>
                                  </button>
                        <button class="buttongoweb" onclick="goToLink('lainnya.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-account"></span>
-                                <h1>Profile</h1>
+                                <span class="mdi mdi-clipboard-text-clock"></span>
+                                <h1>Theather</h1>
                         </div>
                         
                 </div>
