--- a/home.html
+++ b/home.html
@@ -41,19 +41,19 @@
                                 <h1>Recent</h1>
                         </div>
                        </button>
-                       <button class="buttongoweb" onclick="goToLink('history.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
+                       <button class="buttongoweb" onclick="goToLink('/member')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
                                 <span class="mdi mdi-account-group"></span>
                                 <h1>Member</h1>
                         </div>
                        </button>
-                                 <button class="buttongoweb" onclick="goToLink('favorit.html')">
+                                 <button class="buttongoweb" onclick="goToLink('/news')">
                                          <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
                                                  <div class="overlay-navbar"></div>
                                                  <span class="mdi mdi-newspaper-variant"></span>
                                                  <h1>News</h1>
                                          </div>
                                  </button>
-                       <button class="buttongoweb" onclick="goToLink('lainnya.html')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
+                       <button class="buttongoweb" onclick="goToLink('/event')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
                                 <span class="mdi mdi-clipboard-text-clock"></span>
                                 <h1>Theather</h1>
                         </div>
