--- a/dnews.html
+++ b/dnews.html
@@ -13,7 +13,10 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
     <meta name="author" content="48Intens Official" />
-    <meta name="description" content="48Intens Official - 48Intens adalah fanbase besar dan aktif untuk JKT48 dengan lebih dari 45,000 member. Kami selalu memberikan informasi terbaru seputar JKT48 setiap hari, termasuk berita, event, dan masih banyak lagi." />
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Zen Maru Gothic' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Barlow Condensed' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
@@ -31,24 +34,18 @@
         </div>
     </div>
 
-    <footer>
-        Powered by ♥️ <a style="text-decoration:none" href="https://48intens.com/discord"> 48Intens Official</a>
-        <div class="social-icons">
-            <p>Lets Connect With Us</p>
-            <a href="https://www.instagram.com/48intens" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-instagram icon"></i>
-            </a>
-            <a href="https://48intens.com/discord" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-discord icon"></i>
-            </a>
-            <a href="about.html" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-wifi icon"></i>
-            </a>
-        </div>
-        <br>
-    </footer>
+    <br>
+    <br>
+    <br>
+            <footer>
+                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+
+                <br>
+            </footer>
+
 
     <!--SCRIPT-->
+    <script src="../script/main.js"></script>
     <script src="script/news.js"></script>
     <script src="/middleware/middleware.js"></script>
     <script src="script/inject.js"></script>
