--- a/home.html
+++ b/home.html
@@ -28,11 +28,11 @@
                 <div class="navbar-container">
                         <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
                                                         <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-home active" style="color: #FFC601;background: #CECECE7A;
+                                <span class="mdi mdi-home active" style="color: #white;background: #6C6C6C80;
                                 border-radius: 50%;
                                 width: 25px;
                                 height: 25px;"></span>
-                                <h1 style="color: #FFC601;">Home</h1>
+                                <h1>Home</h1>
 
                         </div>
 
@@ -460,11 +460,15 @@
                 </div>
             </div>
 
+    <br>
+    <br>
+    <br>
             <footer>
                 By <a style="text-decoration:none" href=""> Januar Adhi N</a>
 
                 <br>
             </footer>
+
 
             <script>
                 // smooth scroll
