--- a/dtheater.html
+++ b/dtheater.html
@@ -13,7 +13,10 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
     <meta name="author" content="48Intens Official" />
-    <meta name="description" content="48Intens Official - 48Intens adalah fanbase besar dan aktif untuk JKT48 dengan lebih dari 45,000 member. Kami selalu memberikan informasi terbaru seputar JKT48 setiap hari, termasuk berita, event, dan masih banyak lagi." />
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Zen Maru Gothic' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Barlow Condensed' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
@@ -23,63 +26,7 @@
 
 <body>
 
-    <div class="section">
-        <div class="container">
-            <div class="slideshow-container">
-               <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=taE4wnmDHhU"><img src="/assets/heading-bg7.jpg"
-                            alt="Slide 8" loading="lazy"></a>
-                </div>
-                 <div class="slideshow-image">
-                    <a href="https://widget.loket.com/widget/jkt48anniversarygensales"><img src="/assets/heading-bg8.jpg"
-                            alt="Slide 9" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=5cy3vDjTfFY"><img src="/assets/heading-bg.jpg"
-                            alt="Slide 1" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=OpACc2RRTlA"><img src="/assets/heading-bg1.jpg"
-                            alt="Slide 2" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://ssk.jkt48.com/2024/id/vote"><img src="/assets/heading-bg6.jpg" alt="Slide 8"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/ramadhaneventshow2024pb?lang=id"><img src="/assets/heading-bg2.jpg"
-                            alt="Slide 3" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.showroom-live.com/premium_live/officialJKT48/B45325"><img
-                            src="/assets/heading-bg3.jpg" alt="Slide 4" loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/springhascome?lang=id"><img src="/assets/heading-bg4.jpg" alt="Slide 5"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://jkt48.com/valkyrie48?lang=id"><img src="/assets/heading-bg5.jpg" alt="Slide 6"
-                            loading="lazy"></a>
-                </div>
-                <div class="slideshow-image">
-                    <a href="https://www.youtube.com/watch?v=XQpA7bqIcyY&ab_channel=JKT48"><img
-                            src="/assets/heading-bg6.jpeg" alt="Slide 7" loading="lazy"></a>
-                </div>
-            </div>
-            <br>
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-                <span class="dot" onclick="currentSlide(4)"></span>
-                <span class="dot" onclick="currentSlide(5)"></span>
-                <span class="dot" onclick="currentSlide(6)"></span>
-                <span class="dot" onclick="currentSlide(7)"></span>
-                <span class="dot" onclick="currentSlide(8)"></span>
-            </div>
-        </div>
-    </div>
+
 
     <div class="sectionnn">
         <div class="container">
@@ -89,24 +36,18 @@
         </div>
     </div>
 
-    <footer>
-        Powered by ♥️ <a style="text-decoration:none" href="https://48intens.com/discord"> 48Intens Official</a>
-        <div class="social-icons">
-            <p>Lets Connect With Us</p>
-            <a href="https://www.instagram.com/48intens" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-instagram icon"></i>
-            </a>
-            <a href="https://48intens.com/discord" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-discord icon"></i>
-            </a>
-            <a href="about.html" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-wifi icon"></i>
-            </a>
-        </div>
-        <br>
-    </footer>
+    <br>
+    <br>
+    <br>
+            <footer>
+                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+
+                <br>
+            </footer>
+
 
     <!--SCRIPT-->
+    <script src="../script/main.js"></script>
     <script src="script/image.js"></script>
     <script src="/middleware/middleware.js"></script>
     <script src="script/dtheater.js"></script>
