--- a/event.html
+++ b/event.html
@@ -80,7 +80,20 @@
             </div>
         </div>
     </div>
-
+            <div class="section">
+                <div class="container">
+                    <div class="box">
+                        <h1 class="titleup"><span class="icon"><i class="fas fa-theater-masks"></i></span> Upcoming
+                            Theater</h1>
+                        <br>
+                        <hr><br>
+                        <p id="noTheaterMessage"></p>
+                        <div data-aos="zoom-in" id="upcoming" class="card-container"></div>
+                        <br>
+                        <hr><br>
+                    </div>
+                </div>
+            </div>
     <div class="section">
         <div class="container">
             <div class="box">
