--- a/home.html
+++ b/home.html
@@ -300,7 +300,9 @@
                         <br>
                         <hr><br>
                         <p id="noTheaterMessage"></p>
+
                         <div data-aos="zoom-in" id="upcoming" class="card-container"></div>
+
                         <br>
                         <hr><br>
                     </div>
@@ -318,8 +320,8 @@
                             <br />
                             <hr />
                             <div id="newsLimit"></div>
-                            <br />
-                            <a href="/news" class="btn">Cek lainnya</a><br />
+                            <br /><div style="display: flex; justify-content: center; align-items: center;width: 100%;">
+                            <a href="/news" class="btn">Cek lainnya</a></div><br />
                         </div>
                         <div class="box-event">
                             <h1 class="titleup"><span class="icon"><i class="fas fa-calendar"></i></span> Event</h1>
@@ -327,7 +329,8 @@
                             <hr />
                             <div id="eventList"></div>
                             <br />
-                            <a href="/news" class="btn">Cek lainnya</a><br />
+                            <div style="display: flex; justify-content: center; align-items: center;width: 100%;">
+                            <a href="/news" class="btn">Cek lainnya</a></div><br />
                         </div>
                         <div class="box-special">
                             <h1 class="titleup"><span class="icon"><i class="fas fa-envelope"></i></span> Special Links
