--- a/home.html
+++ b/home.html
@@ -119,6 +119,8 @@
 
             <div class="box">
                 <h1 class="titleup"><span class="icon"><i class="fa fa-play-circle"></i></span> Now Live</h1>
+                <div style="display: flex; justify-content: center; align-items: center;"><p id="liveCount"></p></div>
+
                 <br>
                 <hr><br>
                 <p id="noLiveMessage"></p>
@@ -126,7 +128,7 @@
                 </div>
                 <br>
                 <hr><br>
-                <p id="liveCount"></p>
+
             </div>
         </div>
     </div>
