--- a/live.html
+++ b/live.html
@@ -74,14 +74,14 @@
                     <div id="liveListIdn"></div>
                     <br><hr><br>
                     <button id="prevButtonIdn" onclick="listLiveIdn('prev', 'Idn')" class="btn">Previous</button>
-                    <button id="nextButtonIdn" onclick="listLiveIdn('next', 'Idn')" class="btn">Next</button>
+                    <button id="nextButtonIdn" onclick="listLiveIdn('next', 'Idn')" class="btn"style="margin-left: 10px;">Next</button>
                 </div>
                 <div class="box-live">
                     <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live Showroom</h2>
                     <div id="liveListShowroom"></div>
                     <br><hr><br>
                     <button id="prevButtonShowroom" onclick="listLiveShowroom('prev', 'Showroom')" class="btn">Previous</button>
-                    <button id="nextButtonShowroom" onclick="listLiveShowroom('next', 'Showroom')" class="btn">Next</button>
+                    <button id="nextButtonShowroom" onclick="listLiveShowroom('next', 'Showroom')" style="margin-left: 10px;" class="btn">Next</button>
                 </div>
             </div>
         </div>
