--- a/member.html
+++ b/member.html
@@ -9,7 +9,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="/assets/css/home.css" rel="stylesheet">
     <link rel="icon" href="/assets/css/image/favlogo.png" />
-    <link rel="stylesheet" href="./css/style.css" />
     <meta name="author" content="JEKATE48">
     <meta property="og:title" content="JEKATE48">
     <meta property="og:image:height" content="961">
@@ -20,104 +19,62 @@
     <meta property="og:title" content="JEKATE48">
     <meta name="description" content="EXPERIENCE THE MAGIC OF JKT48, ANYTIME, ANYWHERE">
     <meta property="og:description" content="EXPERIENCE THE MAGIC OF JKT48, ANYTIME, ANYWHERE">
-        <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Zen Maru Gothic' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Barlow Condensed' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.3.67/css/materialdesignicons.min.css">
 </head>
 
-<body class="min-h- bg-gray-900 text-white">
+<body class="min-h-screen bg-gray-900 text-white flex flex-col">
 
+    <section class="flex-grow flex items-center justify-center">
+        <div class="container mx-auto px-4 py-4">
+            <div id="member-detail" class="bg-gray-800 rounded-lg shadow-lg overflow-hidden">
+                <div id="loading-skeleton" class="animate-pulse p-4 md:p-8 relative">
+                    <div class="absolute top-4 right-4 md:top-8 md:right-8">
+                        <div class="w-20 h-8 bg-gray-700 rounded-full"></div>
+                    </div>
 
-<nav>
-                <div class="navbar-container">
-
-                                 <button class="buttongoweb" onclick="goToLink('/home')">
-                                         <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
-                                                 <div class="overlay-navbar"></div>
-                                                 <span class="mdi mdi-home"></span>
-                                                 <h1>Home</h1>
-                                         </div>
-                                 </button>
-
-                       <button class="buttongoweb" onclick="goToLink('/live')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-history"></span>
-                                <h1>Recent</h1>
+                    <div class="flex flex-col md:flex-row gap-8">
+                        <div class="w-full md:w-1/3 lg:w-1/4">
+                            <div class="aspect-square bg-gray-700 rounded-lg"></div>
                         </div>
-                       </button>
 
-                                              <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
-                         <div class="overlay-navbar"></div>
-                         <span class="mdi mdi-account-group active" style="color: #white;background: #6C6C6C80;
-                                border-radius: 50%;
-                                width: 25px;
-                                height: 25px;"></span>
-                         <h1>Member</h1>
-
-                       </div>
-                       <button class="buttongoweb" onclick="goToLink('/news')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-newspaper-variant"></span>
-                                <h1>News</h1>
+                        <div class="flex-1 space-y-6">
+                            <div class="space-y-2">
+                                <div class="h-10 bg-gray-700 rounded w-3/4"></div>
+                                <div class="h-6 bg-gray-700 rounded w-1/2"></div>
+                            </div>
+                            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                                <div class="h-20 bg-gray-700 rounded-lg"></div>
+                                <div class="h-20 bg-gray-700 rounded-lg"></div>
+                                <div class="h-20 bg-gray-700 rounded-lg"></div>
+                                <div class="h-20 bg-gray-700 rounded-lg"></div>
+                            </div>
+                            <div class="pt-6">
+                                <div class="h-8 bg-gray-700 rounded w-1/4 mb-4"></div>
+                                <div class="flex flex-wrap gap-4">
+                                    <div class="h-10 bg-gray-700 rounded-full w-32"></div>
+                                    <div class="h-10 bg-gray-700 rounded-full w-32"></div>
+                                    <div class="h-10 bg-gray-700 rounded-full w-32"></div>
+                                </div>
+                            </div>
+                            <div class="pt-6">
+                                <div class="h-8 bg-gray-700 rounded w-1/4 mb-4"></div>
+                                <div class="aspect-video w-full bg-gray-700 rounded-lg"></div>
+                            </div>
                         </div>
-                       </button>
-                       <button class="buttongoweb" onclick="goToLink('/event')"><div class="navbar-box"ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">                                                        <div class="overlay-navbar"></div>
-                                <span class="mdi mdi-clipboard-text-clock"></span>
-                                <h1>Theater</h1>
-                        </div>
-                       </button>
-
-
-                        
-                </div>
-        </nav>
-
-    <div class="container mx-auto p-4 md:p-8">
-        <h1 class="text-2xl md:text-4xl font-bold mb-8">JKT48 Members</h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8">
-            <section class="bg-gray-800 p-4 md:p-6 rounded-lg">
-                <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
-                    <i class="fas fa-user-circle mr-2"></i> Members
-                </h2>
-                <div id="core-members" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 auto-rows-max">
-                    <div class="animate-pulse flex flex-col items-center">
-                        <div class="w-24 h-24 bg-gray-600 rounded-full mb-2"></div>
-                        <div class="h-4 bg-gray-600 rounded w-16 mb-2"></div>
-                        <div class="h-3 bg-gray-600 rounded w-12"></div>
                     </div>
                 </div>
-            </section>
-
-            <section class="bg-gray-800 p-4 md:p-6 rounded-lg">
-                <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6 flex items-center">
-                    <i class="fas fa-user-graduate mr-2"></i> Trainee Members
-                </h2>
-                <div id="trainee-members" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 auto-rows-max">
-                    <div class="animate-pulse flex flex-col items-center">
-                        <div class="w-24 h-24 bg-gray-600 rounded-full mb-2"></div>
-                        <div class="h-4 bg-gray-600 rounded w-16 mb-2"></div>
-                        <div class="h-3 bg-gray-600 rounded w-12"></div>
-                    </div>
-                </div>
-            </section>
+                <div id="member-content" class="hidden"></div>
+            </div>
         </div>
-    </div>
-
-<br>
-<br><br><br>
+    </section>
 
 
-    <script>
-        const hamburgerIcon = document.getElementById('hamburger-icon');
-        const mobileMenu = document.getElementById('mobile-menu');
 
-        hamburgerIcon.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
 
-    </script>
-    <script src="../script/member.js"></script>
+    <script src="../script/dMemberDetail.js"></script>
     <script src="/progress.js"></script>
-    <script src="../script/main.js"></script>
+    <script src="../script/member.js"></script>
+    <script src="/middleware/middleware.js"></script>
+    <script async src="https://www.tiktok.com/embed.js"></script>
     <script src="/security/typicalsleepingboy.js"></script>
 </body>
 
