--- a/dmember.html
+++ b/dmember.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="/assets/css/home.css" rel="stylesheet">
     <link rel="icon" href="/assets/css/image/favlogo.png" />
+    <link rel="stylesheet" href="./css/style.css" />
     <meta name="author" content="JEKATE48">
     <meta property="og:title" content="JEKATE48">
     <meta property="og:image:height" content="961">
@@ -67,6 +68,21 @@
         </div>
     </section>
 
+    <br>
+    <br>
+    <br>
+            <footer>
+                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+
+                <br>
+            </footer>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
