--- a/member.html
+++ b/member.html
@@ -102,9 +102,22 @@
         </div>
     </div>
 
-<br>
-<br><br><br>
 
+    <br>
+    <br>
+    <br>
+            <footer>
+                By <a style="text-decoration:none" href=""> Januar Adhi N</a>
+
+                <br>
+            </footer>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <script>
         const hamburgerIcon = document.getElementById('hamburger-icon');
