--- a/showroom.html
+++ b/showroom.html
@@ -90,8 +90,8 @@
                 <br>
                 <hr><br>
                 <div class="card">
-                    <div class="card-body">
-                        <div id="video-container">
+                    <div class="card-body" style="background: transparent;">
+                        <div style="background: transparent;" id="video-container">
                             <video id="video" class="card-img-top" controls></video>
                             <img id="watermark" src="/assets/watermark.png" alt="Watermark">
                         </div>
@@ -107,20 +107,7 @@
     </div>
 
 
-    <div class="section">
-        <div class="container">
-            <div class="box">
-                <h1 class="titleup"><span class="icon"><i class="fa fa-play-circle"></i></i></span> Live Lainnya</h1>
-                <br>
-                <hr><br>
-                <p id="noLiveMessage"></p>
-                <div class="card-nowlive-container-up">
-                </div>
-                <br>
-                <hr><br>
-            </div>
-        </div>
-    </div>
+
     <br>
     <br>
     <br>
