--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Wots48" />
     <meta name="description"
         content="-" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -113,41 +114,17 @@
 
 
 
-    <div class="section">
-        <div class="container">
+<div style="padding: 20px;">
+  <div style="display: flex; align-items: center; padding: 10px 0;">
+    <div style="width: 10px; height: 10px; background-color: red; border-radius: 50%; margin-right: 10px;"></div>
+    <h1 style="font-size: 24px; margin: 0;">Live</h1>
+    <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
+  </div>
+  <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
+  <div style="display: flex; gap: 10px; margin-top: 20px; width: 100%;" class="card-nowlive-container"></div>
+  
+</div>
 
-
-            <div class="box">
-                <h1 class="titleup"><span class="icon"><i class="fa fa-play-circle"></i></span> Now Live</h1>
-                <div style="display: flex; justify-content: center; align-items: center;"><p id="liveCount"></p></div>
-
-                <br>
-                <hr><br>
-                <p id="noLiveMessage"></p>
-                <div class="card-nowlive-container">
-                </div>
-                <br>
-                <hr><br>
-
-            </div>
-        </div>
-    </div>
-
-
-    <!DOCTYPE html>
-    <html lang="id">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JKT48 Information Page</title>
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <!-- AOS Animation Library -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
     <body>
         <div class="section">
