--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+  
         <nav>
                 <div class="navbar-container">
                         <div class="navbar-box" ontouchstart="addOverlayNavbar(event)" ontouchend="removeOverlayNavbar(event)" ontouchcancel="removeOverlayNavbar(event)">
@@ -116,8 +117,11 @@
 
 <div style="padding: 20px;">
   <div style="display: flex; align-items: center; padding: 10px 0;">
-    <div style="width: 10px; height: 10px; background-color: red; border-radius: 50%; margin-right: 10px;"></div>
-    <h1 style="font-size: 24px; margin: 0;">Live</h1>
+<div class="live-indicator">
+  <div class="circle"></div>
+  <div class="pulse"></div>
+</div>
+    <h1 style="font-size: 24px; margin-left: 10px;">Live</h1>
     <div style="margin-left: auto; font-size: 14px; color: #b0b0b0;" id="liveCount">0 Member</div>
   </div>
   <div id="noLiveMessage" style="text-align: center; color: #b0b0b0;"></div>
@@ -126,150 +130,9 @@
 </div>
 
 
-    <body>
-        <div class="section">
-            <div class="container">
-                <div class="box">
-                    <h1 class="titleup">
-                        <span class="icon"><i class="fas fa-star"></i></span>
-                        APA ITU JKT48?
-                    </h1>
-                    <br>
-                    <hr><br>
-                        <p>
-                            <strong>JKT48</strong> (kependekan dari
-                            <strong>J</strong>a<strong>K</strong>ar<strong>T</strong>a48)
-                            adalah grup idola wanita Indonesia yang berbasis di Jakarta, Indonesia, di mana mereka
-                            memiliki
-                            teater mereka sendiri di mall <strong>fX Sudirman</strong>.
-                        </p>
 
-                        <p>
-                            Grup yang didirikan pada tahun 2011 ini merupakan grup saudari pertama dari AKB48 di luar
-                            Jepang.
-                            JKT48 diproduseri oleh Akimoto Yasushi, dan dimiliki oleh PT. Indonesia Musik Nusantara
-                            (bagian dari IDN Media), yang dibeli dari Dentsu Inter Admark Media Group Indonesia
-                            (bagian dari Dentsu) dan HITS Records (bagian dari MNC).
-                        </p>
-
-                        <div class="team-section">
-                            <h2>Struktur Tim</h2>
-                            <p>Grup ini terdiri dari tiga tim:</p>
-                            <ul>
-                                <li class="team-name">Tim J</li>
-                                <li class="team-name">Tim KIII</li>
-                                <li class="team-name">Tim T</li>
-                            </ul>
-                            <p>Selain itu, grup ini juga memiliki <em>trainee</em> bernama <strong>Akademi
-                                    JKT48</strong>.</p>
-                        </div>
-
-                        <div class="trainee-section">
-                            <p>
-                                Pada bulan Maret 2021, grup ini membubarkan semua tim dan akademi, dan semua anggotanya
-                                kini hanya berada di bawah JKT48.
-                            </p>
-                        </div>
-
-                        <div class="new-era">
-                            NEW ERA JKT48
-                        </div>
-                        <p>
-                            Sejak memasuki era proyek <strong>NEW ERA</strong> yang dimulai awal Januari 2022,
-                            JKT48 telah memiliki 2 formasi berbeda yaitu <strong>Member inti</strong> dan
-                            <em>Trainee</em>.
-                        </p>
-                    <br>
                     <hr><br>
 
-                    <div data-aos="zoom-in" class="setlist-section">
-                        <h2>SETLIST JKT48</h2>
-                        <div class="setlist-grid">
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (1).png" loading="lazy" alt="Setlist 1"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Saka Agari </h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (2).png" loading="lazy" alt="Setlist 2"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Tunas Dibalik Seragam</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (3).png" loading="lazy" alt="Setlist 3"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Ingin Bertemu</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (4).png" loading="lazy" alt="Setlist 4"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Banzai</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (5).png" loading="lazy" alt="Setlist 5"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Idol no Yoake</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (6).png" loading="lazy" alt="Setlist 6"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Cara Meminum Ramune</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (7).png" loading="lazy" alt="Setlist 7"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Sambil menggandeng erat tanganku </h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (8).png" loading="lazy" alt="Setlist 8"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Pajama Drive</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (9).png" loading="lazy" alt="Setlist 9"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Demi Seseorang</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (10).png" loading="lazy" alt="Setlist 10"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Gadis-gadis remaja</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (11).png" loading="lazy" alt="Setlist 11"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Bel terakhir berbunyi</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (12).png" loading="lazy" alt="Setlist 12"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Matahari Milikku</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (13).png" loading="lazy" alt="Setlist 13"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Renai kinshi jourei </h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (14).png" loading="lazy" alt="Setlist 14"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Sekarang sedang jatuh cinta</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (15).png" loading="lazy" alt="Setlist 15"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Dewi Theater</h3>
-                            </div>
-                            <div class="setlist-item">
-                                <img src="/assets/jkt48setlis (16).png" loading="lazy" alt="Setlist 16"
-                                    class="setlist-image">
-                                <h3 class="setlist-title">Believe</h3>
-                            </div>
-                        </div>
-                        <hr><br>
-                    </div>
-                </div>
-            </div>
 
             <div class="section">
                 <div class="container">
