--- a/home.html
+++ b/home.html
@@ -132,7 +132,21 @@
 
 
                     <hr><br>
+    <div class="section">
+        <div class="container">
+            <div class="flex-container">
+                <div class="box-live">
+                    <h2 class="titleup"><span class="icon"><i class="fa fa-history"></i></span> Recent Live</h2>
+                    <div id="liveListIdn"></div>
+               
+                    <div id="liveListShowroom"></div>
+                    <br><hr><br>
+                    <div style="display: flex; justify-content: center; align-items: center;">                    <button style="margin-left: 10px; width: 100px;display: flex; justify-content: center; align-items: center;"class="btn" onclick="goToLink('live.html')">Selengkapnya</button></div>
 
+                </div>
+            </div>
+        </div>
+    </div>
 
             <div class="section">
                 <div class="container">
@@ -375,6 +389,7 @@
             <script src="script/image.js"></script>
             <script src="script/inject.js"></script>
             <script src="/middleware/middleware.js"></script>
+            <script src="script/live.js"></script>
             <script src="../script/main.js"></script>
             <script src="script/log.js"></script>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
